# IC

./: CMakeLists.txt  FireflyOptimizator.cpp  FireflyOptimizator.h  OldFireflyOptimizator.cpp  OldFireflyOptimizator.h  SegmentationEvaluator.cpp  SegmentationEvaluator.h  SegmentedImage.cpp  SegmentedImage.h  WatershedImage.cpp  WatershedImage.h  main.cpp  wshed.cpp
Tests/Interpolation1/: main.cpp
Tests/Interpolation2/: FireflyOptimizator.cpp  FireflyOptimizator.h  Segmentation.cpp  Segmentation.h  main.cpp
